# fiap-fase-2-aurora-siger

./: .gitignore  ENGINEERING_GUIDE.md  README.md  landing_manager.py  pyproject.toml
.github/workflows/: python.yml
docs/: esg-reference.md  generate_plots.py  landing-modules-reference.md  thresholds-reference.md
src/: algorithms.py  authorization.py  constants.py  display.py  enums.py  models.py  physics.py  registry.py  scenarios.py  simulation.py  structures.py
